pyrunner/k8s/00-namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sandbox
  labels:
    app: pyrunner
---
apiVersion: v1
kind: Namespace
metadata:
  name: pyrunner
  labels:
    app: pyrunner
